# tiny-relation-database

./: .gitignore  Makefile  README.md  pyproject.toml
mocks/: users.json
scripts/: add_user.py
src/: authorization.py  logger.py  main.py  server.py
src/engine/: executor.py  table_storage.py
src/engine/wal/: reader.py  recovery.py  writer.py
src/exceptions/: connection.py
src/models/: client.py  command.py  entry.py
src/models/enums/: operations.py
src/models/sql/: token.py
src/sql/: lexer.py  parser.py
tests/: client.py  conftest.py  test_e2e.py  test_lexer.py  test_parser.py  test_table_storage.py  test_wal_writer.py
